2007-01-17  Brian Gough  <bjg@network-theory.co.uk>

	* hyperg_1F1.c (hyperg_1F1_largebx): asymptotic expansion for
	large b and x, with |x|<|b| from Slater 4.3.7
	(hyperg_1F1_1): use new asymptotic expansion for |x|<|b|
	(hyperg_1F1_small_a_bgt0): use new asymptotic expansion for |x|<|b|
	(hyperg_1F1_renorm_b0): add neglected terms in expansion for AS13.3.7

2007-01-14  Brian Gough  <bjg@network-theory.co.uk>

	* legendre_poly.c (gsl_sf_legendre_sphPlm_e): added explicit
	computation of error term to allow for case when final term is
	zero.

2007-01-12  Brian Gough  <bjg@network-theory.co.uk>

	* trig.c (gsl_sf_angle_restrict_symm_err_e): compute edge cases
	more reliably, return NaN when total loss of precision
	(gsl_sf_angle_restrict_pos_err_e): as above

	* legendre_poly.c (gsl_sf_legendre_Pl_e): improve error estimate
	for large l by including rounding error at each step of recurrence

2006-10-03  Brian Gough  <bjg@network-theory.co.uk>

	* poch.c (gsl_sf_lnpoch_e, gsl_sf_lnpoch_sgn_e): corrected
	result->val to 0.0 for x==0, previously returned incorrect value
	1.0

2006-09-24  Brian Gough  <bjg@network-theory.co.uk>

	* laguerre.c (laguerre_large_n): work with small angles to avoid
	cancellation error, computer angular reduction exactly for integer
	eta.

2006-09-22  Brian Gough  <bjg@network-theory.co.uk>

	* zeta.c (gsl_sf_zeta_e): make sin_term exactly zero for negative
	even integers
	(gsl_sf_zetam1_int_e): return value is -1 for zetam1_int with
	negative even integers

2006-03-26  Brian Gough  <bjg@network-theory.co.uk>

	* fermi_dirac.c (fd_neg): initialize s to zero (avoid spurious
	warning from compiler)

2006-02-23  Brian Gough  <bjg@network-theory.co.uk>

	* coulomb.c (gsl_sf_coulomb_wave_FG_e): fixed sign of F_lam_min,
	covers case when k_lam_G is nonzero and F_lam_min and F_lam differ
	in sign.

2006-01-21  Brian Gough  <bjg@network-theory.co.uk>

	* synchrotron.c (gsl_sf_synchrotron_1_e): added first order